# config/swagger-output.json
@@ -8,10 +8,26 @@
       "email": "admin@restaurant.com"
     }
   },
-  "host": "http://localhost:undefined",
+  "host": "localhost:3000",
+  "servers": [
+    {
+      "url": "http://localhost:{PORT}",
+      "description": "Local Development Server",
+      "variables": {
+        "PORT": {
+          "default": "8080"
+        }
+      }
+    },
+    {
+      "url": "https://resturant-management-system-production.up.railway.app",
+      "description": "Production Server"
+    }
+  ],
   "basePath": "/",
   "schemes": [
-    "http"
+    "http",
+    "https"
   ],
   "securityDefinitions": {
     "bearerAuth": {
@@ -22,20 +38,49 @@
     }
   },
   "paths": {
-    "/createUser": {
+    "/login": {
       "post": {
         "tags": [
-                
-                  "Auth"
-                 
-      ],
+          "Auth"
+        ],
         "description": "",
         "parameters": [
           {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/register": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "parameters": [
           {
             "name": "body",
             "in": "body",
@@ -62,113 +107,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-      "/login": {
-        "post": {
-          "tags": [
-             "Auth"
-             ],
-          "description": "",
-          "parameters": [
-            {
-              "name": "body",
-              "in": "body",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "username": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/register": {
-      "post": {
-        "tags": [
-          "Auth"],
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                },
-                "role": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/users/{id}": {
-      "delete": {
-        "tags": [
-          "Auth"
-          ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -178,7 +116,8 @@
     "/menu": {
       "post": {
         "tags": [
-          "Menu"],
+          "Menu"
+        ],
         "description": "",
         "parameters": [
           {
@@ -228,7 +167,8 @@
       },
       "get": {
         "tags": [
-           "Menu"],
+          "Menu"
+        ],
         "description": "",
         "parameters": [
           {
@@ -259,7 +199,8 @@
     "/menu/{id}": {
       "put": {
         "tags": [
-          "Menu"],
+          "Menu"
+        ],
         "description": "",
         "parameters": [
           {
@@ -312,7 +253,8 @@
       },
       "delete": {
         "tags": [
-          "Menu"],
+          "Menu"
+        ],
         "description": "",
         "parameters": [
           {
@@ -349,7 +291,8 @@
     "/menu/approve/{id}": {
       "patch": {
         "tags": [
-          "Menu"],
+          "Menu"
+        ],
         "description": "",
         "parameters": [
           {
@@ -389,7 +332,8 @@
     "/orders": {
       "get": {
         "tags": [
-          "Orders"],
+          "order"
+        ],
         "description": "",
         "parameters": [
           {
@@ -418,7 +362,8 @@
       },
       "post": {
         "tags": [
-         "Orders"],
+          "order"
+        ],
         "description": "",
         "parameters": [
           {
@@ -454,10 +399,10 @@
       }
     },
     "/payment": {
-      
       "post": {
         "tags": [
-          "Orders"],
+          "payment"
+        ],
         "description": "",
         "parameters": [
           {
@@ -506,7 +451,8 @@
     "/orders/table/{tableId}": {
       "get": {
         "tags": [
-          "Orders"],
+          "order"
+        ],
         "description": "",
         "parameters": [
           {
@@ -527,10 +473,10 @@
       }
     },
     "/orders/{orderId}": {
-
       "patch": {
         "tags": [
-          "Orders"],
+          "order"
+        ],
         "description": "",
         "parameters": [
           {
@@ -565,7 +511,8 @@
     "/reports": {
       "post": {
         "tags": [
-         "Reports"],
+          "Report"
+        ],
         "description": "",
         "parameters": [
           {
@@ -608,7 +555,8 @@
     "/tables": {
       "get": {
         "tags": [
-          "Tables"],
+          "Table"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -623,7 +571,8 @@
     "/tables/{tableId}": {
       "patch": {
         "tags": [
-         "Tables"],
+          "Table"
+        ],
         "description": "",
         "parameters": [
           {
@@ -648,6 +597,217 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
