# index.js
@@ -3,8 +3,7 @@ const express = require('express');
 const morgan = require('morgan');
 const dotenv = require('dotenv');
 const bodyParser = require('body-parser');
-const validateRole = require('./middlewares/role.middleware'); // Importing role validation middleware
-const { auth, authorize } = require('./middlewares/auth.middleware');
+
 const app = express();
 
 // dotenv configuration
@@ -14,19 +13,6 @@ dotenv.config();
 app.use(bodyParser.json());
 app.use(morgan('dev'));
 require('./routes/router')(app);
-
-// Protected routes with admin role validation
-
-app.get(
-  '/reports',
-  auth,
-  authorize,
-  validateRole(['ADMIN', 'MANAGER']),
-  (_req, res) => {
-    // Logic to fetch and send reports
-    res.send('Reports fetched successfully');
-  }
-);
 
 app.get('/', (_req, res) => {
   return res.status(200).send('Welcome to Restaurant Management System');
